@@ -83,7 +83,8 @@ const char* Blast_tab_format::field_str[] = {
 	"full_qqual",	// 53
 	"full_qseq",	// 54
 	"qseq_gapped",  // 55
-	"sseq_gapped"	// 56
+	"sseq_gapped",	// 56
+	"qstrand"		// 57
 };
 
 const char* Blast_tab_format::field_desc[] = {
@@ -143,7 +144,8 @@ const char* Blast_tab_format::field_desc[] = {
 	"Query quality values",	// 53
 	"Query sequence",		// 54
 	"Query sequence with gaps",		// 55
-	"Subject sequence with gaps"		// 56
+	"Subject sequence with gaps",		// 56
+	"Query strand"						// 57
 };
 
 Blast_tab_format::Blast_tab_format() :
@@ -360,6 +362,12 @@ void Blast_tab_format::print_match(const Hsp_context& r, const Metadata &metadat
 			for (Hsp_context::Iterator i = r.begin(); i.good(); ++i)
 				out << i.subject_char();
 			break;
+		case 57:
+			if (align_mode.query_translated)
+				out << ((r.blast_query_frame() > 0) ? '+' : '-');
+			else
+				out << '+';
+			break;
 		default:
 			throw std::runtime_error(string("Invalid output field: ") + field_str[*i]);
 		}
@@ -392,6 +400,7 @@ void Blast_tab_format::print_query_intro(size_t query_num, const char *query_nam
 			case 49:
 			case 55:
 			case 56:
+			case 57:
 				out << '*';
 				break;
 			case 12:
