@@ -7,6 +7,8 @@
 - Raised compiler requirement to GCC 4.8.
 - Fixed a bug that caused the final sequence positions to not be printed in the pairwise format.
 - Allow using --min-score instead of --top for the LCA computation of the taxonomy output format.
+- Reduced the number of temporary files.
+- Added output field `qstrand` to the tabular format.
 
 [0.9.24]
 - Fixed a compiler error on macOS.
